--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,24 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.1",
+        "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/orm-pack": "^1.0",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/debug-pack": "^1.0",
+        "symfony/dotenv": "^4.0",
+        "symfony/maker-bundle": "^1.3",
+        "symfony/phpunit-bridge": "^4.0",
+        "symfony/web-server-bundle": "^4.0"
     },
     "config": {
         "preferred-install": {
@@ -36,9 +46,18 @@
         "symfony/polyfill-php56": "*"
     },
     "scripts": {
+
+        "route":"php bin/console debug:router",
+        "cache":"php bin/console cache:clear",
+        "diff": "php bin/console doctrine:migrations:diff",
+        "migrate": "php bin/console doctrine:migrations:migrate",
+        "doc":"php phpDocumentor.phar -d src/Controller -d src/Entity -d src/Util -t docs ",
+        "validate" : "php bin/console doctrine:schema:validate",
+
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
