Created User and Review tables and added CRUD functionality

--- a/composer.json
+++ b/composer.json
@@ -2,26 +2,29 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.0.8",
         "ext-iconv": "*",
+        "koff/crud-maker-bundle": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
-        "symfony/console": "^4.0",
+        "symfony/console": "^3.4",
         "symfony/flex": "^1.0",
-        "symfony/form": "^4.0",
-        "symfony/framework-bundle": "^4.0",
-        "symfony/lts": "^4@dev",
+        "symfony/form": "^3.4",
+        "symfony/framework-bundle": "^3.4",
+        "symfony/lts": "^3",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/twig-bundle": "^4.0",
-        "symfony/yaml": "^4.0"
+        "symfony/security-csrf": "^3.4",
+        "symfony/twig-bundle": "^3.4",
+        "symfony/validator": "^3.4",
+        "symfony/yaml": "^3.4"
     },
     "require-dev": {
         "symfony/debug-pack": "^1.0",
-        "symfony/dotenv": "^4.0",
-        "symfony/maker-bundle": "^1.3",
-        "symfony/phpunit-bridge": "^4.0",
-        "symfony/web-server-bundle": "^4.0"
+        "symfony/dotenv": "^3.4",
+        "symfony/maker-bundle": "^1.1",
+        "symfony/phpunit-bridge": "^3.4",
+        "symfony/web-server-bundle": "^3.4"
     },
     "config": {
         "preferred-install": {
@@ -41,18 +44,16 @@
     },
     "replace": {
         "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
     },
     "scripts": {
-
         "route":"php bin/console debug:router",
         "cache":"php bin/console cache:clear",
         "diff": "php bin/console doctrine:migrations:diff",
         "migrate": "php bin/console doctrine:migrations:migrate",
         "doc":"php phpDocumentor.phar -d src/Controller -d src/Entity -d src/Util -t docs ",
-        "validate" : "php bin/console doctrine:schema:validate",
+        "svalidate": "php bin/console doctrine:schema:validate",
 
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
@@ -71,7 +72,7 @@
     },
     "extra": {
         "symfony": {
-            "id": "01C8X9FK9T4FJ8Q88F112708Q9",
+            "id": "01C7TQVHY28YKNHXKRHD03661Q",
             "allow-contrib": false
         }
     }
