Added login system, modified User to have Admin and User role

--- a/composer.json
+++ b/composer.json
@@ -4,23 +4,25 @@
     "require": {
         "php": "^7.0.8",
         "ext-iconv": "*",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "koff/crud-maker-bundle": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
         "symfony/console": "^3.4",
+        "symfony/expression-language": "^3.4",
         "symfony/flex": "^1.0",
         "symfony/form": "^3.4",
         "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
+        "symfony/security-bundle": "^3.4",
         "symfony/security-csrf": "^3.4",
         "symfony/twig-bundle": "^3.4",
         "symfony/validator": "^3.4",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "^3.4",
         "symfony/maker-bundle": "^1.1",
