--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,8 @@
 security:
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         our_db_provider:
@@ -25,6 +29,7 @@ security:
             logout:
                 path:   /logout
                 target: /
+            access_denied_handler: App\Security\AccessDeniedHandler
 
             # activate different ways to authenticate
 
