Added different views for different roles

--- a/composer.json
+++ b/composer.json
@@ -2,26 +2,26 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.0.8",
+        "php": "^7.1.3",
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "koff/crud-maker-bundle": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
-        "symfony/console": "^3.4",
-        "symfony/expression-language": "^3.4",
+        "symfony/console": "^4.0",
+        "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
-        "symfony/form": "^3.4",
-        "symfony/framework-bundle": "^3.4",
-        "symfony/lts": "^3",
+        "symfony/form": "^4.0",
+        "symfony/framework-bundle": "^4.0",
+        "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/security-bundle": "^3.4",
-        "symfony/security-csrf": "^3.4",
-        "symfony/twig-bundle": "^3.4",
-        "symfony/validator": "^3.4",
-        "symfony/yaml": "^3.4"
+        "symfony/security-bundle": "^4.0",
+        "symfony/security-csrf": "^4.0",
+        "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
+        "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "symfony/debug-pack": "^1.0",
