--- a/.env.dist
+++ b/.env.dist
@@ -13,5 +13,5 @@ APP_SECRET=5e9e6d73a5256941ab927a190d264f19
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/ramen
 ###< doctrine/doctrine-bundle ###
