--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,8 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "symfony/browser-kit": "^4.0",
+        "symfony/css-selector": "^4.0",
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "^3.4",
         "symfony/maker-bundle": "^1.1",
@@ -35,6 +37,8 @@
         "preferred-install": {
             "*": "dist"
         },
+
+
         "sort-packages": true
     },
     "autoload": {
