--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,9 +20,18 @@
         <!-- Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url -->
         <!-- For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db" -->
         <!-- Configure your db driver and server_version in config/packages/doctrine.yaml -->
-        <env name="DATABASE_URL" value="mysql://db_user:db_password@127.0.0.1:3306/db_name"/>
+        <env name="DATABASE_URL" value="mysql://root:root@127.0.0.1:3306/ramen"/>
         <!-- ###- doctrine/doctrine-bundle ### -->
     </php>
+
+    <logging>
+        <log type="coverage-html" target="./build/report"/>
+
+            <log type="junit" target="./build/logfile.xml"/>
+        <log type="testdox-html" target="./build/testdox.html"/>
+        <log type="testdox-text" target="./build/testdox.txt"/>
+        <log type="tap" target="./build/logfile.tap"/>
+    </logging>
 
     <testsuites>
         <testsuite name="Project Test Suite">
